v2024-03-08
Moved a bunch of mementos over to tralce's Vanity Keybinds. API increment.
Note: If you bound something that was moved to tralce's Vanity Keybinds, just install it and the binds should remain intact!

v2024-01-02
Added Astral Aura Projector. Thanks, Rainbow_Stay!

v2023-12-04
Added a chat notification if a memento is on cooldown preventing use of the Antiquarian's Eye.

v2023-11-22
Fixed a bug. Thanks, DohNotAgain!

v2023-11-20
Added Random Mount, Random Favorite Mount, and Mount Group Member binds.

v2023-11-17
Added Drinweth, Valenwood Armorer. Thanks, g0thicicecream (for the rec) and Circuitous (for the ID)!

v2023-07-07
Added Hoarfrost and Pyroclast. Thanks, IceMan!

v2023-04-21
API update. Added Sharp-As-Night and Azandar Al-Cybiades. Thanks, azzazzellice!

v2023-04-06
Added Jubilee Cake 2023

v2023-03-16
Added Aderine, Fargrave Dregs Dealer. Thanks, bearbelly!

v2023-03-13
API update

v2022-11-25
API update, added Zuqoth. Thanks, Clattuc!

v2022-08-30
API update

v2022-06-06
Added High Isle companions

v2022-04-07
Fixed it so the cake is actually detectable

v2022-04-06
Changed the cake to the 2022 version

v2022-03-29
Added Giladil the Ragpicker

v2022-01-28
Added latest assistants. Thanks, @G103Prince!

v2022-01-09
Added Almalexia's Enchanted Lantern

v2021-12-19
Merged RuffaWuffa's pull request to add 21 mementos. Thanks so much!

v2021-12-16
Added seasonal XP mementos.

v2021-11-27.1
Removed faulty chatspam. Sorry all! Renamed a bunch of key-value pairs
internally to make it easier to add mementos and to read the code.

v2021-11-27
Added an on-login chat reminder to back up your binds in preparation for the
next release. Write them down or take a screenshot. Also, sorry for the
inconvenience, and I do not intend to ever have to do this again for tralce's
Collectible Keybinds. This change comes before I add several new mementos in
the next release.

v2021-11-23
New version numbering scheme. Clarification of text. Added github repo.