@@ -30,6 +30,7 @@ tralceCollectibles = {
     [11113] = "Comp_SharpAsNight",
     [11114] = "Comp_Azandar",
     [11876] = "Asst_Drinweth",
+    [12414] = "Asst_Xyn",
     -- Throwables --
     [  601] = "Thro_MudBallPouch",
     [ 1108] = "Thro_CherryBlossomBranch",
